# new_test_work

./: .gitignore  README.md  pyproject.toml
comments/: admin.py  models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_post.py
config/: settings.py  urls.py
fixtures/: comments.json  posts.json  users.json
posts/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
posts/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_created_at_alter_user_date_of_birth_and_more.py
