[tool.poetry]
name = "new-test-work"
version = "0.1.0"
description = "Тестовое задание"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
ipython = "^8.26.0"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
python-dotenv = "^1.0.1"
setuptools = "^74.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
